# doppelchatter

./: .gitignore  Makefile  README.md  doppel.py  doppelchatter.yaml  pyproject.toml
scenarios/: monday-morning.yaml  morning-after.yaml  napkin-poem.yaml  post-match.yaml  shared-wall.yaml  the-mask.yaml  the-photo.yaml  the-rooftop.yaml  witching-hour.yaml
src/doppelchatter/: __init__.py  app.py  cli.py  config.py  engine.py  interventions.py  llm.py  models.py  session.py  storage.py  websocket.py
src/doppelchatter/static/: index.html
tests/: conftest.py  test_config.py  test_engine.py  test_integration.py  test_interventions.py  test_models.py  test_storage.py  test_websocket.py
twins/: ghost.yaml  hana.yaml  jin.yaml  kai.yaml  morri.yaml  morrigan.md  morrigan.yaml  neon.yaml  sable.yaml  sol.md  sol.yaml
